--- a/storeweb/nbproject/private/private.properties
+++ b/storeweb/nbproject/private/private.properties
@@ -2,4 +2,7 @@ deploy.ant.properties.file=C:\\Users\\hoaha\\AppData\\Roaming\\NetBeans\\12.5\\t
 j2ee.server.domain=C:/Users/DELL/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 j2ee.server.home=C:/Users/hoaha/Downloads/apache-tomcat-9.0.54-windows-x64/apache-tomcat-9.0.54
 j2ee.server.instance=tomcat90:home=C:\\Users\\hoaha\\Downloads\\apache-tomcat-9.0.54-windows-x64\\apache-tomcat-9.0.54
+javac.debug=true
+javadoc.preview=true
+selected.browser=Chrome
 user.properties.file=C:\\Users\\hoaha\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
