--- a/storeweb/nbproject/private/private.properties
+++ b/storeweb/nbproject/private/private.properties
@@ -1,8 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\hoaha\\AppData\\Roaming\\NetBeans\\12.5\\tomcat90.properties
-j2ee.server.domain=C:/Users/DELL/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Users/hoaha/Downloads/apache-tomcat-9.0.54-windows-x64/apache-tomcat-9.0.54
-j2ee.server.instance=tomcat90:home=C:\\Users\\hoaha\\Downloads\\apache-tomcat-9.0.54-windows-x64\\apache-tomcat-9.0.54
+deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-751607446.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/Admin/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\hoaha\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
