--- a/storeweb/nbproject/project.properties
+++ b/storeweb/nbproject/project.properties
@@ -29,22 +29,30 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.jsp-api-2.1-6.0.2.jar=C:\\Users\\hoaha\\Desktop\\PTIT\\Nam_4\\PTTK\\jsp-api-2.1-6.0.2.jar
+file.reference.jsp-api-2.1.jar=D:\\DOCUMENT\\KI_7\\PhanTichThietKeHeThongThongTin\\library\\jsp-api-2.1.jar
 file.reference.jstl-1.2.jar=C:\\Users\\hoaha\\Desktop\\PTIT\\Nam_4\\PTTK\\jstl-1.2.jar
+file.reference.jstl-1.2.jar-1=D:\\DOCUMENT\\KI_7\\PhanTichThietKeHeThongThongTin\\library\\jstl-1.2.jar
+file.reference.mysql-connector-java-8.0.13.jar=D:\\DOCUMENT\\KI_7\\PhanTichThietKeHeThongThongTin\\library\\mysql-connector-java-8.0.13.jar
 file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\hoaha\\Desktop\\PTIT\\Nam_4\\PTTK\\mysql-connector-java-8.0.25.jar
 file.reference.servlet-api-5.5.23.jar=C:\\Users\\hoaha\\Desktop\\PTIT\\Nam_4\\PTTK\\servlet-api-5.5.23.jar
+file.reference.servlet-api.jar=D:\\DOCUMENT\\KI_7\\PhanTichThietKeHeThongThongTin\\library\\servlet-api.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.20.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.jstl-1.2.jar}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
     ${file.reference.servlet-api-5.5.23.jar}:\
-    ${file.reference.jsp-api-2.1-6.0.2.jar}
+    ${file.reference.jsp-api-2.1-6.0.2.jar}:\
+    ${file.reference.jsp-api-2.1.jar}:\
+    ${file.reference.mysql-connector-java-8.0.13.jar}:\
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.jstl-1.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
